# xgboost-template

./: README.md  pyproject.toml
notebooks/: 01_data_preparation.ipynb  02_classification_model_building.ipynb  02_regression_model_building.ipynb  03_classification_model_evaluation.ipynb  03_regression_model_evaluation.ipynb  04_exploration.ipynb
src/xgboost_template/: modelling_data_contract.py
src/xgboost_template/data_preparation/: preprocessing.py
src/xgboost_template/modelling/: hyperparameter_tuning.py
xgboost_template/: config.py
xgboost_template/src/data_preparation/: data_preprocessor.py
