[project]
name = "xgboost_template"
description = "Template for building and evaluating an xgboost model."
readme = "README.md"
license = {file = "LICENSE"}
version = "0.1.0"
authors = [
    { name = "Ciaran Grant", email = "ciaran.grant@hotmail.co.uk" }
]
requires-python = ">=3.11"

dependencies = [
    "pandas",
    "numpy==1.24.0",
    "joblib",
    "matplotlib",
    "seaborn",
    "xgboost",
    "optuna",
    "betacal",
    "shap",
]

[project.urls]
"Repository" = ""

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"